tests/outref/TSCP08_errors.ref
-- Error cases
select *;
select n1.*;
select n1.* from names n2;
select * from (select n1.* from names n2);
select * as alias from names;
select * alias from names;
select (select names.*) from names;

-- ORDER BY TABLENAME.ASTERISK usage with wrong TABLENAME
select * from (select firstname,lastname,id from names)n1 order by n2.*,n1.id;
select id from names n1 order by n2.*;
select n1.* from names n1 order by *,n1.id;
[ERROR]: ERR_SELECT_STAR_NO_TABLES: SELECT * with no tables specified is not valid
LINE 1:1: select *;
                 ^
[ERROR]: ERR_MISSING_FROM_ENTRY: Missing FROM-clause entry for table : N1
LINE 2:1: select n1.*;
                 ^^^^
[ERROR]: ERR_MISSING_FROM_ENTRY: Missing FROM-clause entry for table : N1
LINE 3:1: select n1.* from names n2;
                 ^^^^
[ERROR]: ERR_MISSING_FROM_ENTRY: Missing FROM-clause entry for table : N1
LINE 4:1: select * from (select n1.* from names n2);
                                ^^^^
[ERROR]: ERR_SELECT_STAR_NO_TABLES: SELECT * with no tables specified is not valid
LINE 5:1: select * as alias from names;
                 ^
[ERROR]: ERR_SELECT_STAR_NO_TABLES: SELECT * with no tables specified is not valid
LINE 6:1: select * alias from names;
                 ^
[ERROR]: ERR_SUBQUERY_ONE_COLUMN: Subquery must return only one column
LINE 7:1: select (select names.*) from names;
                 ^^^^^^^^^^^^^^^^
[ERROR]: ERR_MISSING_FROM_ENTRY: Missing FROM-clause entry for table : N2
LINE 9:1: ...(select firstname,lastname,id from names)n1 order by n2.*,n1.id;
                                                                  ^^^^
[ERROR]: ERR_MISSING_FROM_ENTRY: Missing FROM-clause entry for table : N2
LINE 10:1: select id from names n1 order by n2.*;
                                            ^^^^
LINE 11:1: select n1.* from names n1 order by *,n1.id;
                                              ^
syntax error, unexpected ASTERISK
